frontend/components/issues/css/issues.css
/** Issues ************************************************************************************************************/

issues #issuesAddContainer {
  position: relative;
  margin: 15px;
}
issues #issuesAddContainer .md-dialog-container {
  top: 0 !important;
  height: 200px !important;
}
issues #issuesAddContainer .md-dialog-backdrop {
  height: 205px !important;
}
issues #issuesAddContainer md-input-container {
  margin-bottom: 0;
}
issues #issuesAddContainer h4 {
  margin-left: 4px;
  color: rgba(0, 0, 0, 0.6);
}

issues .issueHeader {
  position: relative;
}
issues .issueHeader:hover {
  background-color: #EEEEEE;
  cursor: pointer;
}

issues md-list {
  padding: 0;
}

issues .issuesInfo {
  text-align: center;
  padding: 15px;
  background: #E8EAF6;
  margin: 15px;
  border-radius: 4px;
}
issues .issuesInfo p {
  margin: 0;
  color: rgba(0, 0, 0, 0.7);
}

issues #addAlert {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}
issues #addAlert #addAlertBackground {
  background: rgba(0, 0, 0, 0.6);
  padding: 40px;
}
issues #addAlert #addAlertBackground #addAlertInfo {
  background: #FFFFFF;
  border-radius: 4px;
}
issues #addAlert #addAlertBackground #addAlertInfo .md-button {
  background: #EEEEEE;
}

issues span.addHint {
  color: grey;
  padding-right: 6px;
  font-size: 14px;
}

issues #issuesAddButton {
  position: absolute;
  bottom: 0;
  right: 0;
  margin-right: 12px;
}

issues #issueDescriptionContainer {
  margin-top: 0px;
}

issues #issuesContent {
  height: calc(100% - 70px);
  overflow-y: auto;
  overflow-x: hidden;
}

issues .importBCFLoading {
  margin: 10px auto;
}

issues #issueRoleIndicator {
  width: 8px;
  border: 1px solid #DDDDDD;
  margin-right: 10px;
}

/** Issue *************************************************************************************************************/
issue {
  display: block;
  height: 100%;
}

issue md-list-item .md-button,
issue md-list-item .md-button .md-ripple-container {
  border-radius: 0;
}

issue h3,
issue h4 {
  word-wrap: break-word;
  white-space: normal !important;
}

issue #descriptionText {
  max-height: 120px;
  height: 100px;
}

issue #descriptionText textarea {
  max-height: 120px;
  height: 100px;
  overflow-y: auto;
}

issue .issueCommentsContainer {
  padding: 0 15px 0 25px
}
issue .issueCommentsContainer md-list-item {
  padding: 0 !important;
}

issue .issueCommentsContainer md-list-item .commentModifyButton {
  width: 20px;
  height: 20px;
  font-size: 20px;
  margin: 0 0 0 20px;
  outline: none;
}
issue .issueCommentsContainer .issueCommentInfo {
  position: relative;
}
issue .issueCommentsContainer .issueCommentInfo p {
  color: rgba(0,0,0,0.35) !important;
}
issue .issueCommentsContainer .issueCommentsFooter {
  margin-top: -15px;
  padding-bottom: 10px;
  /*border-bottom: 1px solid rgba(0, 0, 0, 0.12);*/
}

md-list-item.issueRole {
  padding: 0;
}
md-list-item .issueAssignColourMarker {
  display: block;
  width: 10px;
  height: 25px;
  margin-right: 10px;
}

issue .issueOpenContainer {
  margin-top: 10px;
}

/** Issues List *******************************************************************************************************/
issues-list .issueListItem {
  position: relative;
  outline: none;
}
issues-list .issueListItem:hover {
  cursor: pointer;
  background: #f3f3f3;

}
issues-list .issueListItem *:hover {
  cursor: inherit;
}

issues-list .issueListItem div:first-child {
  outline: none;
}

issues-list #issuesListItemContent {
  padding: 10px;
  padding-right: 40px;
}

issues-list #issuesListItemTitle {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

issues-list #issuesListItemInfo {
  margin: 5px 0;
}

issues-list #issuesListItemInfo label,
issues-list #issuesListItemDescription label {
  color: rgba(0, 0, 0, 0.5);
  word-wrap: break-word;
}

issues-list #issuesListItemDescription {
  height: 60px;
  font-size: 13px;
}
issues-list #issuesListItemDescription label {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

issues-list #issuesListItemEnter {
  position: absolute;
  top: 0;
  right: 0;
  width: 32px;
  height: 100%;
  background: rgb(12, 47, 84);
  outline: none;
}
issues-list #issuesListItemEnter md-icon {
  color: #FFFFFF;
}

issues-list .issueListItemThumbnail {
  margin-right: 10px;
  height: 120px;
  width: 120px;
  background: rgba(240,240,240,1)
}

issues-list #issuesListContainer {
  outline: none;
}

issues-list .issueJustClosed{
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(212,212,212,0.7);
  display: flex;
  justify-content: center;
  align-items: center;
}

issues-list .closedText{
  padding: 15px 25px;
  background-color: rgba(255,255,255,0.9);
  border: 1px solid #DDDDDD;
 }

/** Issues List Item **************************************************************************************************/
.userRoleIssueListItemTitle {
  border: 1px solid rgba(240,240,240,1);
  margin-left: -4px;
  padding-left: 4px;
}

issues-list-item:hover {
   background: #eaeaea;
}

issues-list-item .issueListItemMissingThumbnail {
  font-size: 50px;
  width: 50px;
  height: 50px;
  opacity: 0.3;
}

issues-list-item #issueListItemStatus {
  margin-right: 5px;
}

/** Issue Comp ********************************************************************************************************/
issue #issueAll {
  outline: none;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

issue #issueFooterButtons {
  position: absolute;
  bottom: 0;
  background: white;
  width: 100%;
  z-index: 10;
}

issue .issueItemContainer {
  padding: 10px;
  margin-top: 8px; 
  padding-top: 10px;
  padding-bottom: 10px;
}

issue .issueItemContainer div {
  outline: none;
}

issue #issueeArea {
  padding-top: 15px;
  padding-bottom: 15px;
  outline: none;
}
issue .issueTitleArea:hover {
  background: rgba(250,250,250,1);
  cursor: pointer;
}
issue .issueTitleArea #issueTitle {
  cursor: inherit;
}

issue #issueInfoArea {
  padding-top: 5px;
  padding-bottom: 20px;
}

issue #issueTitleInput {
  margin: 2px 0 0;
  height: 40px;
}

issue #issueTitle {
  margin: 10px 0;
}

issue .issueItemStatus {
  margin-right: 5px;
}

issue .heightFix {
  height: initial;
}

issue .fullHeight {
  height: 100%;
}

issue .issueThumbnail {
  position: relative;
  display: inline-block;
  padding: 0px;
  padding-bottom: 0px;
  padding-top: 0px;
  background-position-y: 50%;
  height: 200px;
  background-repeat: no-repeat;
  background-size: contain;
}

issue .issueThumbnailImage {
  width: 100%;
  height: 100%;
}

issue .issueThumbnailImage:hover {
  cursor: pointer;
  opacity: 0.8;
}

issue .issuesLabel {
  padding-bottom: 10px;
}

issue .issueIssueOwner {
  margin-top: 0;
}

issue .issueAutoComment,
issue .issueCommentOwner {
  margin-bottom: 10px;
}

issue .issueIssueOwner label,
issue .issueCommentOwner label {
  color: rgba(0, 0, 0, 0.5);
  font-size: 14px;
}

issue .issueCommentOwner .issueNotification {
  color: rgb(6, 86, 60);
}

issue .issueAutoComment label {
  color: rgba(0, 0, 0, 0.5);
  /*font-style: italic;*/
  font-size: 14px;
}

issue .issueComment {
  margin: 0 0 5px;
}

issue .issueCommentTitle {
  margin: 10px 0;
  font-size: 14px;
}

issue .issueTextActions {
  z-index: 2;
}

issue #issueDescription {
  outline: none;
  margin-bottom: 10px;
}
issue #issueDescription label {
  word-break: break-all;
}

issue .issueComment:hover,
issue #issueDescription:hover {
  background: rgba(250,250,250,1);
  cursor: pointer;
}
issue .issueComment *:hover,
issue #issueDescription *:hover {
  cursor: pointer;
}

issue #additionalInfoButton {
  margin: 0 5px 0 -8px;
}

issue #issueAdditional {
  margin: -10px 0;
  padding-top: 5px;
}

issue #issueNewComment {
  padding-top:  0px;
  padding-bottom: 0px;
  margin: 0px;
  max-height: 150px;
  overflow-y: auto;
}

issue #issueNewComment textarea {
  background-color: rgba(255, 255, 255, 0.3);
  border: 1px solid rgb(230, 230, 230);
  border-radius: 2px;
  color: black;
}

issue #issueNewComment md-input-container {
  margin: 0px;
}

issue #issueAdditional md-input-container {
  margin-top: 12px;
  margin-bottom: 8px;
  font-size: 14px;
}

issue #descriptionAndComments {
  overflow-y:auto;
  overflow-x:hidden;
}

issue #issueRoleIndicator {
  margin-left: 7px;
  margin-top: 5px;
  height: 28px;
}

/** Issue Screen Shot  ************************************************************************************************/
#issueScreenShotDialog {
  width:80%;
  height: calc(80% + 40px); /* 40px is the height of the dialog toolbar */
  max-height: calc(80% + 40px);
  overflow: hidden;
}

issues-screen-shot #issueScreenShotActions {
  position: absolute;
  bottom: 5px;
  display: block;
  width: 176px;
  left: 0;
  right: 0;
  margin: auto;
  background: rgba(255, 255, 255, 0.8);
  border-radius: 4px;
}

issues-screen-shot #issueScreenShotFAIcon {
  font-size: 24px;
}

issues-screen-shot #issueScreenShotContent {
  overflow: hidden;
  height: calc(100% - 40px);
}

issues-screen-shot #scribbleCanvas {
  position: absolute;
  top: 0;
  left: 0;
}

issues-screen-shot #issueScreenShotImage {
  max-width: 100%;
  max-height: 100%;
}

issues-screen-shot #issueScreenShotPenIndicator {
  position: absolute;
  display: block;
  color: #FFFFFF;
  font-size: 20px;
  font-weight: bold;
  pointer-events: none;
}

